Changes and adaptations

--- a/course-recommender-system-app/templates/index.html
+++ b/course-recommender-system-app/templates/index.html
@@ -47,7 +47,7 @@
                     </form>
                 </div>
                 {% if showtitle%} 
-                    <h4 class="jumbotron-heading">Recommendations for Course <span style = "color: red; font-size:1.5rem;">"{{coursename}}"</span> are shown below</h4>
+                    <h4 class="jumbotron-heading">Recommendations for course <span style = "color: red; font-size:1.5rem;">"{{coursename}}"</span> are shown below</h4>
                 {%endif%}
             </div>
         </section>
