--- a/course-recommender-system-app/templates/prescreen.html
+++ b/course-recommender-system-app/templates/prescreen.html
@@ -69,9 +69,11 @@
 
             {%endif%}
 
+            <h2 class="jumbotron-heading">Top paid courses for you:</h2>
+
                 <div class="row">
-                
-                {%for course in coursemap%}
+
+                {%for course in first_coursemap%}
   
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
@@ -80,7 +82,7 @@
                                 <p class="card-text" style = "color:white;">{{course}}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                         <a href="{{coursemap[course]}}" target = "_blank" class="btn btn-outline-danger" style =  "color: white;">View Course</a>
+                                         <a href="{{first_coursemap[course]}}" target = "_blank" class="btn btn-outline-danger" style =  "color: white;">View Course</a>
                                     </div>
                                 </div>
                             </div>
@@ -88,13 +90,31 @@
                     </div>
 
                 {%endfor%}
-
-                  
-
-
-                </div>
-                
             </div>
+
+            <h2 class="jumbotron-heading">Users been watching:</h2>
+
+                <div class="row">
+
+                {%for course in second_coursemap%}
+    
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+
+                            <div class="card-body bg-dark">
+                                <p class="card-text" style = "color:white;">{{course}}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                            <a href="{{second_coursemap[course]}}" target = "_blank" class="btn btn-outline-danger" style =  "color: white;">View Course</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                {%endfor%}
+            </div>
+                
         </div>
 
     </main>
