--- a/course-recommender-system-app/templates/index.html
+++ b/course-recommender-system-app/templates/index.html
@@ -55,12 +55,12 @@
         <div class="album py-5 bg-light">
             <div class="container">
 
-            {%if showerror%}
+            {%if coursemap == {}%}
                 <div class="card text-center">
                     
                     <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">Seems Like the Course for {{coursename}} is not available currently,we'll report it to the Course Administrator for uploading the course :)</p>
+                        <p class="card-text">Seems like the search for "{{coursename}}" is not currently available, we'll report it to the course administrator to upload the course.</p>
                         <a href="/" class="btn btn-primary">Home Page</a>
                     </div>
                
