--- a/book-recommender-system-app/static/main.css
+++ b/book-recommender-system-app/static/main.css
@@ -2,39 +2,18 @@
 	font-family: 'Roboto', 'Arial', sans-serif;
 }
 
-/* Sign-in and Register Page */
-.container {
-	padding: 2em 2em 3em 2em;
-	align-items: left;
-}
-.container_signin {
-	padding: 2em 2em 3em 2em;
-	border: 4px solid #bbb;
-	align-items: left;
-}
-
-.container_signin {
-	align-items: left;
-}
-
 h5 {
 	margin: 0.2em 0;
 }
 
-.form-group {
-	margin: 1.5em 0;
+img {
+	max-width: 200px;
+	max-height: 200px;
 }
 
-
-
-.message {
-	font-size: 12px;
-	font-weight: 600;
-	max-width: 300px;
-    background: #fff;
-	padding: 1em;
-	border: 2px solid indianred;
-	color: indianred;
+#books-cards{
+	background-color:transparent;
+	border:none;
 }
 
 input {
@@ -43,16 +22,30 @@ input {
     min-width: 80%;
 }
 
-.container_forgot {
-	text-align: left;
-    margin-top: 1em;
-    font-size: 0.85em;
-}
 
-.container_toregister {
-	margin-bottom: 1.5em;
-    color: #333;
-    font-weight: 600;
-    border: 1px solid lightseagreen;
-    padding: 0.5em;
-}
+div.stars {
+	display: inline-block;
+  }
+  input.star { display: none; }
+  label.star {
+	float: right;
+	padding: 10px;
+	font-size: 25px;
+	color: #444;
+	transition: all .2s;
+  }
+  input.star:checked ~ label.star:before {
+	content: '\f005';
+	color: #FD4;
+	transition: all .25s;
+  }
+  input.star-5:checked ~ label.star:before {
+	color: #FE7;
+	text-shadow: 0 0 20px #952;
+  }
+  input.star-1:checked ~ label.star:before { color: #F62; }
+  label.star:hover { transform: rotate(-15deg) scale(1.3); }
+  label.star:before {
+	content: '\f006';
+	font-family: FontAwesome;
+  }
