Changing plans to voting characteristic

--- a/book-recommender-system-app/templates/main.html
+++ b/book-recommender-system-app/templates/main.html
@@ -72,7 +72,7 @@
                         <img src="{{bookmap[book]}}">
                     </div>
 
-                    <div class="stars mx-auto">
+                    <!-- <div class="stars mx-auto">
                         <form action="/main">
                           <input class="star star-5" id="star-5" type="radio" name="star"/>
                           <label class="star star-5" for="star-5"></label>
@@ -85,7 +85,7 @@
                           <input class="star star-1" id="star-1" type="radio" name="star"/>
                           <label class="star star-1" for="star-1"></label>
                         </form>
-                      </div>
+                      </div> -->
                                 
                       
                   </div>
