--- a/book-recommender-system-app/templates/search.html
+++ b/book-recommender-system-app/templates/search.html
@@ -49,7 +49,7 @@
 
 
       <div>
-        <p> Your name was {{firstname}} and your surname is {{lastname}}</p>
+        <p> Your name was {{firstname}} and your surname is {{lastname}}, voting score is {{ratings}}</p>
       </div>
 
 
