Adding website intro and google api

--- a/book-recommender-system-app/templates/main.html
+++ b/book-recommender-system-app/templates/main.html
@@ -60,35 +60,20 @@
       <div class="container">
 
         <h2 class="jumbotron-heading">Users been reading:</h2>
-
+  
           <div class="row">
-          
+
+
           {%for book in bookmap%}
 
               <div class="col-md-4 ">
                   <div id="books-cards" class="card mb-4 background-none">
-
                     <div class="col-lg-6 title-image-div mx-auto">
-                        <img src="{{bookmap[book]}}">
-                    </div>
-
-                    <!-- <div class="stars mx-auto">
-                        <form action="/main">
-                          <input class="star star-5" id="star-5" type="radio" name="star"/>
-                          <label class="star star-5" for="star-5"></label>
-                          <input class="star star-4" id="star-4" type="radio" name="star"/>
-                          <label class="star star-4" for="star-4"></label>
-                          <input class="star star-3" id="star-3" type="radio" name="star"/>
-                          <label class="star star-3" for="star-3"></label>
-                          <input class="star star-2" id="star-2" type="radio" name="star"/>
-                          <label class="star star-2" for="star-2"></label>
-                          <input class="star star-1" id="star-1" type="radio" name="star"/>
-                          <label class="star star-1" for="star-1"></label>
-                        </form>
-                      </div> -->
-                                
-                      
+                      <a href="book_view/{{book}}">
+                        <img src="{{bookmap[book]['image']}}">
+                      </a>
                   </div>
+                </div>
               </div>
 
           {%endfor%}
