Adding search engine, first steps

--- a/book-recommender-system-app/templates/main.html
+++ b/book-recommender-system-app/templates/main.html
@@ -38,7 +38,7 @@
           <div class="form-floating my-2">
               <form action="/" method="POST">
                   <div class="mb-2">
-                      <input name="course" type="text" class="form-control" id="course" placeholder = 'Search for books'>
+                      <input name="book" type="text" class="form-control" id="book" placeholder = 'Search for books'>
                   </div>
                   <button type="submit" class="btn btn-primary">Search</button>
               </form>
