--- a/vehicle-detection-app/app/templates/index.html
+++ b/vehicle-detection-app/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Vehicle Detection-Count-Classification App</title>
+  <title>Vehicle Detection App</title>
   <!-- CSS  -->
   <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
@@ -11,7 +11,7 @@
 <body>
   <nav style="background-color: #32a84a" class="lighten-1"  role="navigation" style="height: 100px">
     <div class="nav-wrapper container">
-      <a id="logo-container" class="brand-logo center"><h5>Vehicle Detection-Count-Classification App</h5></a>
+      <a id="logo-container" class="brand-logo center"><h5>Vehicle Detection App</h5></a>
     </div>
   </nav>
 
